Fixing code overflow slides

--- a/lectures/content/style.css
+++ b/lectures/content/style.css
@@ -1,3 +1,3 @@
-.reveal pre {
-    font-size: 0.30em;
+.reveal {
+    font-size: 38px;
 }
